<resources>
    <string name="app_name">LoginSignUpExample</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_and_condition">Terms_And_Condition</string>
    <string name="i_accept_all_terma_and_conditions">I accept all terma and conditions</string>
    <string name="signup">Signup</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">logo</string>
    <string name="welcome">welcome</string>
    <string name="username">username</string>
    <string name="forgot_password">forgot password</string>
    <string name="don_t_have_an_account_signup">don\'t have an account signup</string>
    <string name="login">Login</string>

    <string-array name="nationality">
        <item >Nepali</item>
        <item >Indian</item>
        <item >Russian</item>
        <item >Chinese</item>
    </string-array>
</resources>