 <?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

<!--    <ImageView-->
<!--        android:id="@+id/logoImageView"-->
<!--        android:layout_width="100dp"-->
<!--        android:layout_height="100dp"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:contentDescription="@string/logo"-->
<!--        android:src="" />-->

    <TextView
        android:id="@+id/greetingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/greetingTextView"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/username"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:padding="4dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPasswordTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/signupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/don_t_have_an_account_signup"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>
